; ModuleID = '/home/carl/AnghaBench/sqlcipher/src/extr_os.c_sqlite3OsAccess.c'
source_filename = "/home/carl/AnghaBench/sqlcipher/src/extr_os.c_sqlite3OsAccess.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @sqlite3OsAccess(%struct.TYPE_4__* %0, i8* %1, i32 %2, i32* %3) #0 {
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  store %struct.TYPE_4__* %0, %struct.TYPE_4__** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %9 = call i32 @DO_OS_MALLOC_TEST(i32 0)
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %10, i32 0, i32 0
  %12 = bitcast {}** %11 to i32 (%struct.TYPE_4__*, i8*, i32, i32*)**
  %13 = load i32 (%struct.TYPE_4__*, i8*, i32, i32*)*, i32 (%struct.TYPE_4__*, i8*, i32, i32*)** %12, align 8
  %14 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %15 = load i8*, i8** %6, align 8
  %16 = load i32, i32* %7, align 4
  %17 = load i32*, i32** %8, align 8
  %18 = call i32 %13(%struct.TYPE_4__* %14, i8* %15, i32 %16, i32* %17)
  ret i32 %18
}

declare dso_local i32 @DO_OS_MALLOC_TEST(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
